--- a/config.json
+++ b/config.json
@@ -42,7 +42,9 @@
         "dashboard7",
         "dashboard8",
         "dashboard9",
-        "dashboard10"
+        "dashboard10",
+        "dashboard11",
+        "dashboard12"
     ],
     "module_directory_name": "module",
     "experimental_mode": false,
