--- a/config.json
+++ b/config.json
@@ -44,7 +44,8 @@
         "dashboard9",
         "dashboard10",
         "dashboard11",
-        "dashboard12"
+        "dashboard12",
+        "dashboard13"
     ],
     "module_directory_name": "module",
     "experimental_mode": false,
